crates/plotnik-lib/tests/02-parser/recovery_validation/field_equals_typo_no_space.txt
Q = (node name=(identifier))
------------------ DIAGNOSTICS -------------------
error: fields use `:`, not `=`
 --> query.ptk:1:15
  |
1 | Q = (node name=(identifier))
  |               ^
  |
help: use `:`
  |
1 - Q = (node name=(identifier))
1 + Q = (node name:(identifier))
  |
